# portfolio

./: .gitignore  README.md
Assets/Adaptive Performance/: AdaptivePerformanceGeneralSettings.asset
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
Assets/AddressableAssetsData/AssetGroups/: Built In Data.asset  Default Local Group.asset
Assets/AddressableAssetsData/AssetGroups/Schemas/: Built In Data_PlayerDataGroupSchema.asset  Default Local Group_BundledAssetGroupSchema.asset  Default Local Group_ContentUpdateGroupSchema.asset
Assets/AddressablesBuild/StandaloneWindows64/: defaultlocalgroup_assets_all_4e9dfc65ce592876ef6d20ebc97e5c05.bundle
Assets/Plugins/NativePlugin/: NativePlugin.h
Assets/Scenes/: AddressablesHarryScene.unity  BurstPerformanceTest.unity  NativePlugin.unity  PlayerLoop.unity
Assets/Scripts/_TODO/Example_Addressables/: AddressableTextLoader.cs  BrailleSpinner.cs  ExampleAddressables.asmdef  HarryPotterLoader.cs  README.md  SafeAreaHandler.cs  TextDisplayer.cs
Assets/Scripts/_TODO/Example_BurstNativeArray/: BurstMathJob.cs  BurstPerformanceTest.cs  ComplexMathJob.cs  README.md
Assets/Scripts/_TODO/Example_ConcurentDictionary/: AssetCache.cs  (+1 more)
Assets/TextMesh Pro/Fonts/: NotoSansSymbols2-Regular SDF.asset  NotoSansSymbols2_BasicUnicode.asset
NativePlugin/: .gitignore  CMakeLists.txt  NativePlugin.cpp  build.bat  build_native.bat
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
PublicAssets/: index.html
(+106 files in other folders)
